<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_title"
    android:gravity="center_vertical|center_horizontal"
    android:textSize="30sp"/>

  <EditText
    android:id="@+id/user_name_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:layout_marginTop="70dp"
    android:hint="@string/enter_your_username"/>

  <Button
    android:id="@+id/button_enter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_enter"
    android:layout_marginTop="120dp"
    android:textSize="20sp" />

  <Button
    android:id="@+id/button_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_exit"
    android:layout_marginTop="500dp"
    android:textSize="20sp" />


</RelativeLayout>