<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RankActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_rank"
    android:gravity="center_horizontal|center_vertical"
    android:textSize="30sp" />

  <Button
    android:id="@+id/button_query"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_query"
    android:layout_marginTop="70dp" />

  <Button
    android:id="@+id/button_delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_delete"
    android:layout_marginTop="70dp"
    android:layout_marginStart="100dp" />

  <Button
    android:id="@+id/button_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_back"
    android:layout_marginTop="70dp"
    android:layout_marginStart="300dp" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerview"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    tools:listitem="@layout/recyclerview_item"
    android:layout_marginTop="150dp"
    android:padding="@dimen/big_padding" />

</RelativeLayout>