<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".GameActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:textAlignment="center"
    android:textSize="30sp"
    android:text="@string/app_title" />

  <TextView
    android:id="@+id/user_name_display"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginTop="100dp"
    android:text="@string/playing_user_name"
    android:textAlignment="center"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/user_input"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginTop="130dp"
    android:textSize="20sp"
    android:inputType="number" />

  <Button
    android:id="@+id/button_enter"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="200dp"
    android:text="@string/button_enter" />

  <EditText
    android:id="@+id/output"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginTop="250dp"
    android:inputType="none"
    android:focusable="false"
    android:gravity="top|start" />

</RelativeLayout>